# circuits-parser

./: .ghc.environment.aarch64-darwin-9.14.1  .gitignore  cabal.project  circuits-parser.cabal
.github/workflows/: haskell-ci.yml
app/: bench-parse.hs  debug-deck.hs  deck-test.hs  mealy-example.hs  step-test.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.14.1/: circuits-0.1.0.0-inplace.conf  circuits-parser-0.1.0.0-inplace.conf  package.cache
examples/: bench-parse.hs  debug-deck.hs  deck-test.hs  mealy-example.hs  step-test.hs
src/Circuit/: Deck.hs  Markup.hs  Mealy.hs  Parser.hs
src/Circuit/Markup/: Parse.hs  Render.hs  Tree.hs  Types.hs  Warn.hs
src/Circuit/Parser/: Lexer.hs  Primitives.hs  Step.hs  Token.hs  Tokenizer.hs
src/Circuit/Parser/Lexer/: Bridge.hs
