cabal-version: 3.0
name: circuits-parser
version: 0.1.0.0
license: BSD-3-Clause
author: Tony Day
maintainer: tonyday567@gmail.com
category: parsing
build-type: Simple
tested-with: ghc ==9.14.1

library
  exposed-modules:
    Circuit.Deck
    Circuit.Markup
    Circuit.Markup.Types
    Circuit.Markup.Parse
    Circuit.Markup.Render
    Circuit.Markup.Tree
    Circuit.Markup.Warn
    Circuit.Mealy
    Circuit.Parser
    Circuit.Parser.Lexer
    Circuit.Parser.Primitives
    Circuit.Parser.Token
    Circuit.Parser.Step

  build-depends:
    base >=4.20 && <5,
    bytestring,
    circuits,
    clock >=0.8 && <0.9,
    containers,
    deepseq,
    harpie,
    prettyprinter,
    profunctors,
    text,
    these,

  hs-source-dirs: src
  default-language: GHC2024
  ghc-options:
    -Wall
    -Wcompat

executable step-test
  main-is: step-test.hs
  build-depends:
    base >=4.20 && <5,
    circuits-parser,
  hs-source-dirs: app
  default-language: GHC2024

executable debug-deck
  main-is: debug-deck.hs
  build-depends:
    base >=4.20 && <5,
    circuits-parser,
    these,
  hs-source-dirs: app
  default-language: GHC2024

executable deck-test
  main-is: deck-test.hs
  build-depends:
    base >=4.20 && <5,
    circuits-parser,
  hs-source-dirs: app
  default-language: GHC2024
  ghc-options:
    -Wall
    -Wcompat

executable mealy-example
  main-is: mealy-example.hs
  build-depends:
    base >=4.20 && <5,
    bytestring,
    circuits-parser,

  hs-source-dirs: app
  default-language: GHC2024
  ghc-options:
    -Wall
    -Wcompat

benchmark parse-bench
  type: exitcode-stdio-1.0
  main-is: bench-parse.hs
  build-depends:
    base >=4.20 && <5,
    bytestring,
    circuits-parser,
    circuits-perf,
    text,

  hs-source-dirs: app
  default-language: GHC2024
  ghc-options:
    -Wall
    -Wcompat
    -O2
    -threaded
